shorter and better

--- a/bj.ipynb
+++ b/bj.ipynb
@@ -48,10 +48,10 @@
     "    possible_hands = []\n",
     "    aces = 0\n",
     "\n",
-    "    for x in cards:\n",
-    "        if type(x) == int:\n",
-    "            score += x\n",
-    "        elif x in [\"J\", \"Q\", \"K\"]:\n",
+    "    for card in cards:\n",
+    "        if type(card) == int:\n",
+    "            score += card\n",
+    "        elif card in [\"J\", \"Q\", \"K\"]:\n",
     "            score += 10\n",
     "        else:\n",
     "            score += 1\n",
@@ -68,86 +68,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "ec2349de",
    "metadata": {},
    "outputs": [],
    "source": [
     "def bj_round(hit_on_17=False):\n",
-    "    \n",
+    "\n",
     "    deck_current = DECK_COMPLETE.copy()\n",
-    "    \n",
-    "    player_cards = [rand_card(deck_func=deck_current), rand_card(deck_func=deck_current)]\n",
+    "\n",
+    "    player_cards = [\n",
+    "        rand_card(deck_func=deck_current),\n",
+    "        rand_card(deck_func=deck_current),\n",
+    "    ]\n",
     "    player_score = score(player_cards)\n",
     "    dealer_cards = [rand_card(deck_func=deck_current)]\n",
     "    dealer_score = score(dealer_cards)\n",
-    "    \n",
-    "    if(player_score==21):\n",
-    "        return ('Win', 21)\n",
-    "    \n",
-    "    game_state = 'Ongoing'\n",
-    "    strategy = ''\n",
-    "    double_flag = 0\n",
-    "    \n",
-    "    while game_state == 'Ongoing':\n",
-    "        if(player_score<=8):\n",
-    "            strategy = 'H'\n",
-    "        elif(player_score>=17+hit_on_17):\n",
-    "            strategy = 'S'\n",
-    "        else:\n",
-    "            strategy = BASIC_STRATEGY[(player_score-9)][(dealer_score-2)]\n",
     "\n",
-    "        if(strategy=='D'):\n",
-    "            double_flag = 1\n",
+    "    if player_score == 21:\n",
+    "        return (\"Win\", 21)\n",
+    "\n",
+    "    game_state = \"Player_Phase\"\n",
+    "    strategy = \"\"\n",
+    "\n",
+    "    while game_state == \"Player_Phase\":\n",
+    "        if player_score <= 8:\n",
+    "            strategy = \"H\"\n",
+    "        elif player_score >= 17 + hit_on_17:\n",
+    "            strategy = \"S\"\n",
+    "        else:\n",
+    "            strategy = BASIC_STRATEGY[(player_score - 9)][(dealer_score - 2)]\n",
+    "\n",
+    "        if strategy == \"D\":\n",
     "            player_cards.append(rand_card(deck_func=deck_current))\n",
     "            player_score = score(player_cards)\n",
-    "            if(player_score==-1):\n",
-    "                game_state='Loss'\n",
+    "            if player_score == -1:\n",
+    "                return (\"Loss\", player_score)\n",
     "            else:\n",
-    "                game_state='S'\n",
-    "        if(strategy=='H'):\n",
+    "                game_state = \"Dealer_Phase\"\n",
+    "        elif strategy == \"H\":\n",
     "            player_cards.append(rand_card(deck_func=deck_current))\n",
     "            player_score = score(player_cards)\n",
-    "            if(player_score==-1):\n",
-    "                game_state='Loss'\n",
-    "        if(strategy=='S'):\n",
-    "            game_state='S'\n",
-    "        \n",
-    "    if game_state == 'Loss':\n",
-    "        return ('Loss', player_score)\n",
-    "    \n",
-    "    while((dealer_score<17+hit_on_17) ^ (dealer_score ==-1)):\n",
+    "            if player_score == -1:\n",
+    "                return (\"Loss\", player_score)\n",
+    "        elif strategy == \"S\":\n",
+    "            game_state = \"Dealer_Phase\"\n",
+    "\n",
+    "    while (dealer_score < 17 + hit_on_17):\n",
     "        dealer_cards.append(rand_card(deck_func=deck_current))\n",
     "        dealer_score = score(dealer_cards)\n",
-    "    \n",
-    "    if((player_score > dealer_score) or (dealer_score>21)):\n",
-    "        return ('Win', player_score)\n",
-    "    elif(player_score == dealer_score):\n",
-    "        return ('Draw', player_score)\n",
-    "    else:\n",
-    "        return ('Loss', player_score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "8282db82",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = {\"Win\": [], \"Draw\": [], \"Loss\": []}\n",
+    "        if dealer_score == -1:\n",
+    "            return (\"Win\", player_score)\n",
     "\n",
-    "for _ in range(1000000):\n",
-    "    wdl, total = bj_round()\n",
-    "    results[wdl].append(total)"
+    "    if (player_score > dealer_score):\n",
+    "        return (\"Win\", player_score)\n",
+    "    elif player_score == dealer_score:\n",
+    "        return (\"Draw\", player_score)\n",
+    "    elif (player_score < dealer_score):\n",
+    "        return (\"Loss\", player_score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "ef01f30e",
+   "execution_count": 39,
+   "id": "f9167a8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Win', 21)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bj_round()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "8282db82",
    "metadata": {
-    "hide_input": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -155,42 +162,48 @@
      "output_type": "stream",
      "text": [
       "Win:\n",
-      "21:22.033%\n",
-      "20:25.215%\n",
-      "19:14.712%\n",
-      "18:11.359%\n",
-      "17:7.912%\n",
-      "16:3.744%\n",
-      "15:3.891%\n",
-      "14:3.968%\n",
-      "13:4.267%\n",
-      "12:2.817%\n",
-      "11:0.08%\n",
+      "21:22.038%\n",
+      "20:25.25%\n",
+      "19:14.766%\n",
+      "18:11.404%\n",
+      "17:7.814%\n",
+      "16:3.699%\n",
+      "15:3.939%\n",
+      "14:3.95%\n",
+      "13:4.252%\n",
+      "12:2.802%\n",
+      "11:0.087%\n",
       "\n",
       "Draw:\n",
-      "21:8.218%\n",
-      "20:33.062%\n",
-      "19:18.155%\n",
-      "18:19.283%\n",
-      "17:21.283%\n",
+      "21:7.828%\n",
+      "20:33.01%\n",
+      "19:18.428%\n",
+      "18:19.266%\n",
+      "17:21.468%\n",
       "\n",
       "Loss:\n",
-      "20:4.01%\n",
-      "19:7.467%\n",
-      "18:11.096%\n",
-      "17:15.591%\n",
-      "16:5.356%\n",
-      "15:5.553%\n",
-      "14:5.661%\n",
-      "13:6.026%\n",
-      "12:3.78%\n",
-      "11:0.107%\n",
-      "-1:35.353%\n",
+      "20:4.009%\n",
+      "19:7.494%\n",
+      "18:11.149%\n",
+      "17:15.514%\n",
+      "16:5.344%\n",
+      "15:5.581%\n",
+      "14:5.634%\n",
+      "13:5.977%\n",
+      "12:3.816%\n",
+      "11:0.098%\n",
+      "-1:35.383%\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "results = {\"Win\": [], \"Draw\": [], \"Loss\": []}\n",
+    "\n",
+    "for _ in range(1000000):\n",
+    "    wdl, total = bj_round()\n",
+    "    results[wdl].append(total)\n",
+    "\n",
     "for key, values in results.items():\n",
     "    print(f\"{key}:\")\n",
     "\n",
@@ -205,85 +218,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 156,
    "id": "e6baf58d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('Win', 19, 13)"
+       "('Win', 14)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def bj_round_till_win(cum_loss=0):\n",
-    "    deck_current = DECK_COMPLETE.copy()\n",
-    "\n",
-    "    player_cards = [\n",
-    "        rand_card(deck_func=deck_current),\n",
-    "        rand_card(deck_func=deck_current),\n",
-    "    ]\n",
-    "    player_score = score(player_cards)\n",
-    "    dealer_cards = [rand_card(deck_func=deck_current)]\n",
-    "    dealer_score = score(dealer_cards)\n",
-    "\n",
-    "    if player_score == 21:\n",
-    "        return (\"Win\", 21, 21 + cum_loss)\n",
-    "\n",
-    "    game_state = \"Ongoing\"\n",
-    "    strategy = \"\"\n",
-    "\n",
-    "    while game_state == \"Ongoing\":\n",
-    "        if player_score <= 8:\n",
-    "            strategy = \"H\"\n",
-    "        elif player_score >= 17:\n",
-    "            strategy = \"S\"\n",
-    "        else:\n",
-    "            strategy = BASIC_STRATEGY[(player_score - 9)][(dealer_score - 2)]\n",
-    "\n",
-    "        if strategy == \"D\":\n",
-    "            player_cards.append(rand_card(deck_func=deck_current))\n",
-    "            player_score = score(player_cards)\n",
-    "            if player_score == -1:\n",
-    "                cum_loss += 1\n",
-    "                game_state = \"L\"\n",
-    "            else:\n",
-    "                cum_loss += -1\n",
-    "                game_state = \"S\"\n",
-    "        if strategy == \"H\":\n",
-    "            player_cards.append(rand_card(deck_func=deck_current))\n",
-    "            player_score = score(player_cards)\n",
-    "            if player_score == -1:\n",
-    "                game_state = \"L\"\n",
-    "        if strategy == \"S\":\n",
-    "            game_state = \"S\"\n",
-    "\n",
-    "    if game_state == \"Loss\":\n",
-    "        return bj_round_till_win(cum_loss=cum_loss - 2)\n",
-    "\n",
-    "    while (dealer_score < 17) ^ (dealer_score == -1):\n",
-    "        dealer_cards.append(rand_card(deck_func=deck_current))\n",
-    "        dealer_score = score(dealer_cards)\n",
-    "\n",
-    "    if (player_score > dealer_score) or (dealer_score > 21):\n",
-    "        return (\"Win\", player_score, player_score + cum_loss)\n",
-    "    elif player_score == dealer_score:\n",
-    "        return bj_round_till_win(cum_loss=cum_loss)\n",
-    "    else:\n",
-    "        return bj_round_till_win(cum_loss=cum_loss - 2)\n",
+    "def bj_round_till_win_single(cum_loss=0, penalty_per_loss=2):\n",
+    "    current_round = bj_round()\n",
+    "    if(current_round[0] == \"Win\"):\n",
+    "        return (current_round[0], current_round[1] - cum_loss)\n",
+    "    if(current_round[0] == \"Draw\"):\n",
+    "        return bj_round_till_win_single(cum_loss, penalty_per_loss)\n",
+    "    if(current_round[0] == \"Loss\"):\n",
+    "        return bj_round_till_win_single(cum_loss + penalty_per_loss, penalty_per_loss)        \n",
     "\n",
     "\n",
-    "bj_round_till_win()"
+    "bj_round_till_win_single()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 157,
    "id": "8b48de42",
    "metadata": {
     "scrolled": true
@@ -293,10 +259,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[16, 16, 15, 15, 11, 10]\n",
-      "[18, 16, 10, 10, 8, 7]\n",
-      "[18, 17, 13, 13, 8, 7]\n",
-      "[17, 15, 11, 10, 9, 7]\n"
+      "[21, 18, 17, 15, 13, 9]\n",
+      "[18, 18, 17, 15, 13, 10]\n",
+      "[21, 21, 18, 13, 12, 7]\n",
+      "[19, 18, 18, 17, 16, 13]\n"
      ]
     }
    ],
@@ -305,92 +271,48 @@
     "for _ in range(4):\n",
     "    player = []\n",
     "    for _ in range(6):\n",
-    "        player.append(max(bj_round_till_win()[2] - 3, 7))\n",
+    "        player.append(max(bj_round_till_win_single()[1], 7))\n",
     "    print(sorted(player, reverse=True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "21968c8a",
+   "execution_count": 189,
+   "id": "94177ac3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('Win', 21, 21)"
+       "[21, 20, 17, 14, 8, 11]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def bj_round_till_win_2(cum_loss=0):\n",
-    "    deck_current = DECK_COMPLETE.copy()\n",
-    "\n",
-    "    player_cards = [\n",
-    "        rand_card(deck_func=deck_current),\n",
-    "        rand_card(deck_func=deck_current),\n",
-    "    ]\n",
-    "    player_score = score(player_cards)\n",
-    "    dealer_cards = [rand_card(deck_func=deck_current)]\n",
-    "    dealer_score = score(dealer_cards)\n",
-    "\n",
-    "    if player_score == 21:\n",
-    "        return (\"Win\", 21, 21 - cum_loss)\n",
-    "\n",
-    "    game_state = \"Ongoing\"\n",
-    "    strategy = \"\"\n",
-    "    double_flag = 0\n",
-    "\n",
-    "    while game_state == \"Ongoing\":\n",
-    "        if player_score <= 8:\n",
-    "            strategy = \"H\"\n",
-    "        elif player_score >= 17:\n",
-    "            strategy = \"S\"\n",
-    "        else:\n",
-    "            strategy = BASIC_STRATEGY[(player_score - 9)][(dealer_score - 2)]\n",
-    "\n",
-    "        if strategy == \"D\":\n",
-    "            player_cards.append(rand_card(deck_func=deck_current))\n",
-    "            player_score = score(player_cards)\n",
-    "            if player_score == -1:\n",
-    "                cum_loss += 1\n",
-    "                game_state = \"L\"\n",
-    "            else:\n",
-    "                cum_loss += -1\n",
-    "                game_state = \"S\"\n",
-    "        if strategy == \"H\":\n",
-    "            player_cards.append(rand_card(deck_func=deck_current))\n",
-    "            player_score = score(player_cards)\n",
-    "            if player_score == -1:\n",
-    "                game_state = \"L\"\n",
-    "        if strategy == \"S\":\n",
-    "            game_state = \"S\"\n",
-    "\n",
-    "    if game_state == \"Loss\":\n",
-    "        return (\"L\", cum_loss - 1)\n",
-    "\n",
-    "    while (dealer_score < 17) ^ (dealer_score == -1):\n",
-    "        dealer_cards.append(rand_card(deck_func=deck_current))\n",
-    "        dealer_score = score(dealer_cards)\n",
-    "\n",
-    "    if (player_score > dealer_score) or (dealer_score > 21):\n",
-    "        return (\"Win\", cum_loss, player_score - cum_loss)\n",
-    "    elif player_score == dealer_score:\n",
-    "        return (\"D\", cum_loss)\n",
-    "    else:\n",
-    "        return (\"L\", cum_loss + 1)\n",
+    "def bj_round_till_win_group(size=6, cum_loss=0, penalty_per_loss=1):\n",
+    "    group = []\n",
+    "    while len(group) < size:\n",
+    "        current_round = bj_round()\n",
+    "        if(current_round[0] == \"Win\"):\n",
+    "            group.append(current_round[1] - cum_loss)\n",
+    "        if(current_round[0] == \"Draw\"):\n",
+    "            cum_loss += penalty_per_loss\n",
+    "        if(current_round[0] == \"Loss\"):\n",
+    "            cum_loss += penalty_per_loss\n",
+    "    \n",
+    "    return group\n",
     "\n",
     "\n",
-    "bj_round_till_win_2()\n"
+    "bj_round_till_win_group()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 198,
    "id": "10de90f9",
    "metadata": {},
    "outputs": [
@@ -398,27 +320,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[17, 13, 13, 12, 12, 10]\n",
-      "[16, 16, 7, 7, 7, 7]\n",
-      "[17, 17, 16, 16, 15, 13]\n",
-      "[17, 15, 13, 7, 7, 7]\n"
+      "[19, 17, 9, 17, 17, 15]\n",
+      "[16, 15, 15, 11, 13, 11]\n",
+      "[20, 17, 8, 16, 15, 12]\n",
+      "[18, 19, 18, 11, 8, 2]\n"
      ]
     }
    ],
    "source": [
-    "#min score 7\n",
     "for _ in range(4):\n",
-    "    cum_loss = 0\n",
-    "    player = []\n",
-    "    while len(player) < 6:\n",
-    "\n",
-    "        game = bj_round_till_win_2(cum_loss)\n",
-    "        cum_loss = game[1]\n",
-    "\n",
-    "        if game[0] == \"Win\":\n",
-    "            player.append(max(game[2] - 3, 7))\n",
-    "\n",
-    "    print(sorted(player, reverse=True))"
+    "    print(bj_round_till_win_group())"
    ]
   }
  ],
