--- a/bj.ipynb
+++ b/bj.ipynb
@@ -114,24 +114,24 @@
     "        elif strategy == \"S\":\n",
     "            game_state = \"Dealer_Phase\"\n",
     "\n",
-    "    while (dealer_score < 17 + hit_on_17):\n",
+    "    while dealer_score < 17 + hit_on_17:\n",
     "        dealer_cards.append(rand_card(deck_func=deck_current))\n",
     "        dealer_score = score(dealer_cards)\n",
     "        if dealer_score == -1:\n",
     "            return (\"Win\", player_score)\n",
     "\n",
-    "    if (player_score > dealer_score):\n",
+    "    if player_score > dealer_score:\n",
     "        return (\"Win\", player_score)\n",
     "    elif player_score == dealer_score:\n",
     "        return (\"Draw\", player_score)\n",
-    "    elif (player_score < dealer_score):\n",
+    "    elif player_score < dealer_score:\n",
     "        return (\"Loss\", player_score)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8e0e4447",
+   "id": "1f781c81",
    "metadata": {},
    "outputs": [
     {
@@ -236,12 +236,12 @@
    "source": [
     "def bj_round_till_win_single(cum_loss=0, penalty_per_loss=2):\n",
     "    current_round = bj_round()\n",
-    "    if(current_round[0] == \"Win\"):\n",
+    "    if current_round[0] == \"Win\":\n",
     "        return (current_round[0], current_round[1] - cum_loss)\n",
-    "    if(current_round[0] == \"Draw\"):\n",
+    "    if current_round[0] == \"Draw\":\n",
     "        return bj_round_till_win_single(cum_loss, penalty_per_loss)\n",
-    "    if(current_round[0] == \"Loss\"):\n",
-    "        return bj_round_till_win_single(cum_loss + penalty_per_loss, penalty_per_loss)        \n",
+    "    if current_round[0] == \"Loss\":\n",
+    "        return bj_round_till_win_single(cum_loss + penalty_per_loss, penalty_per_loss)\n",
     "\n",
     "\n",
     "bj_round_till_win_single()"
@@ -267,7 +267,7 @@
     }
    ],
    "source": [
-    "#min score 7\n",
+    "# min score 7\n",
     "for _ in range(4):\n",
     "    player = []\n",
     "    for _ in range(6):\n",
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "74e9eed8",
+   "id": "8eb6bd62",
    "metadata": {},
    "outputs": [
     {
@@ -297,13 +297,13 @@
     "    group = []\n",
     "    while len(group) < size:\n",
     "        current_round = bj_round()\n",
-    "        if(current_round[0] == \"Win\"):\n",
+    "        if current_round[0] == \"Win\":\n",
     "            group.append(current_round[1] - cum_loss)\n",
-    "        if(current_round[0] == \"Draw\"):\n",
+    "        if current_round[0] == \"Draw\":\n",
     "            cum_loss += penalty_per_loss\n",
-    "        if(current_round[0] == \"Loss\"):\n",
+    "        if current_round[0] == \"Loss\":\n",
     "            cum_loss += penalty_per_loss\n",
-    "    \n",
+    "\n",
     "    return group\n",
     "\n",
     "\n",
