--- a/bj.ipynb
+++ b/bj.ipynb
@@ -89,8 +89,6 @@
     "        return (\"Win\", 21)\n",
     "\n",
     "    game_state = \"Player_Phase\"\n",
-    "    strategy = \"\"\n",
-    "\n",
     "    while game_state == \"Player_Phase\":\n",
     "        if player_score <= 8:\n",
     "            strategy = \"H\"\n",
@@ -99,28 +97,27 @@
     "        else:\n",
     "            strategy = BASIC_STRATEGY[(player_score - 9)][(dealer_score - 2)]\n",
     "\n",
-    "        if strategy == \"D\":\n",
-    "            player_cards.append(rand_card(deck_func=deck_current))\n",
-    "            player_score = score(player_cards)\n",
-    "            if player_score == -1:\n",
-    "                return (\"Loss\", player_score)\n",
-    "            else:\n",
-    "                game_state = \"Dealer_Phase\"\n",
-    "        elif strategy == \"H\":\n",
-    "            player_cards.append(rand_card(deck_func=deck_current))\n",
-    "            player_score = score(player_cards)\n",
-    "            if player_score == -1:\n",
-    "                return (\"Loss\", player_score)\n",
-    "        elif strategy == \"S\":\n",
+    "        if strategy == \"S\":\n",
     "            game_state = \"Dealer_Phase\"\n",
+    "        else:\n",
+    "            player_cards.append(rand_card(deck_func=deck_current))\n",
+    "            player_score = score(player_cards)\n",
+    "            if player_score == -1:\n",
+    "                return (\"Loss\", player_score)\n",
+    "            elif strategy == \"D\":\n",
+    "                game_state = \"Dealer_Phase\"\n",
     "\n",
     "    while dealer_score < 17 + hit_on_17:\n",
     "        dealer_cards.append(rand_card(deck_func=deck_current))\n",
     "        dealer_score = score(dealer_cards)\n",
     "        if dealer_score == -1:\n",
+    "            if(strategy == \"D\"):\n",
+    "                return (\"Win_Double\", player_score)\n",
     "            return (\"Win\", player_score)\n",
     "\n",
     "    if player_score > dealer_score:\n",
+    "        if(strategy == \"D\"):\n",
+    "            return (\"Win_Double\", player_score)\n",
     "        return (\"Win\", player_score)\n",
     "    elif player_score == dealer_score:\n",
     "        return (\"Draw\", player_score)\n",
@@ -131,13 +128,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d6f54d06",
+   "id": "6ee964ff",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('Win', 15)"
+       "('Loss', 17)"
       ]
      },
      "execution_count": 4,
@@ -161,58 +158,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Win:\n",
-      "21:21.935%\n",
-      "20:25.168%\n",
-      "19:14.809%\n",
-      "18:11.491%\n",
-      "17:7.883%\n",
-      "16:3.669%\n",
-      "15:3.945%\n",
-      "14:3.97%\n",
-      "13:4.279%\n",
-      "12:2.768%\n",
-      "11:0.083%\n",
+      "Win: 38.177% of all games\n",
+      "21: 20.47%\n",
+      "20: 25.74%\n",
+      "19: 15.15%\n",
+      "18: 12.06%\n",
+      "17: 8.29%\n",
+      "16: 3.61%\n",
+      "15: 3.88%\n",
+      "14: 3.97%\n",
+      "13: 4.26%\n",
+      "12: 2.57%\n",
       "\n",
-      "Draw:\n",
-      "21:7.913%\n",
-      "20:33.056%\n",
-      "19:18.179%\n",
-      "18:19.261%\n",
-      "17:21.592%\n",
+      "Win_Double: 5.154% of all games\n",
+      "21: 33.13%\n",
+      "20: 21.18%\n",
+      "19: 12.17%\n",
+      "18: 6.45%\n",
+      "17: 4.42%\n",
+      "16: 4.4%\n",
+      "15: 4.34%\n",
+      "14: 4.32%\n",
+      "13: 4.27%\n",
+      "12: 4.59%\n",
+      "11: 0.72%\n",
       "\n",
-      "Loss:\n",
-      "20:4.04%\n",
-      "19:7.539%\n",
-      "18:11.029%\n",
-      "17:15.445%\n",
-      "16:5.32%\n",
-      "15:5.632%\n",
-      "14:5.751%\n",
-      "13:5.972%\n",
-      "12:3.782%\n",
-      "11:0.103%\n",
-      "-1:35.388%\n",
+      "Draw: 8.551% of all games\n",
+      "21: 8.03%\n",
+      "20: 32.87%\n",
+      "19: 18.28%\n",
+      "18: 19.33%\n",
+      "17: 21.49%\n",
+      "\n",
+      "Loss: 48.118% of all games\n",
+      "20: 4.02%\n",
+      "19: 7.49%\n",
+      "18: 11.15%\n",
+      "17: 15.5%\n",
+      "16: 5.33%\n",
+      "15: 5.61%\n",
+      "14: 5.68%\n",
+      "13: 5.99%\n",
+      "12: 3.77%\n",
+      "11: 0.1%\n",
+      "-1: 35.35%\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "results = {\"Win\": [], \"Draw\": [], \"Loss\": []}\n",
+    "results = {\"Win\": [], \"Win_Double\": [], \"Draw\": [], \"Loss\": []}\n",
     "\n",
-    "for _ in range(1000000):\n",
-    "    wdl, total = bj_round()\n",
-    "    results[wdl].append(total)\n",
+    "for _ in range(10000000):\n",
+    "    round_result, round_score = bj_round()\n",
+    "    results[round_result].append(round_score)\n",
     "\n",
     "for key, values in results.items():\n",
-    "    print(f\"{key}:\")\n",
-    "\n",
     "    total = dict(Counter(values))\n",
+    "    print(f\"{key}: {round(len(values)*100/10000000, 3)}% of all games\")\n",
     "\n",
     "    sorted_dict = dict(sorted(total.items(), reverse=True))\n",
     "\n",
     "    for key, value in sorted_dict.items():\n",
-    "        print(f\"{key}:{round(value*100/sum(sorted_dict.values()), 3)}%\")\n",
+    "        print(f\"{key}: {round(value*100/sum(sorted_dict.values()), 2)}%\")\n",
     "    print(\"\")"
    ]
   },
@@ -225,7 +233,7 @@
     {
      "data": {
       "text/plain": [
-       "('Win', 16)"
+       "('Win', 17)"
       ]
      },
      "execution_count": 6,
@@ -238,6 +246,8 @@
     "    current_round = bj_round()\n",
     "    if current_round[0] == \"Win\":\n",
     "        return (current_round[0], current_round[1] - cum_loss)\n",
+    "    if current_round[0] == \"Win_Double\":\n",
+    "        return (current_round[0], current_round[1] - cum_loss + 2)\n",
     "    if current_round[0] == \"Draw\":\n",
     "        return bj_round_till_win_single(cum_loss, penalty_per_loss)\n",
     "    if current_round[0] == \"Loss\":\n",
@@ -249,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "id": "8b48de42",
    "metadata": {
     "scrolled": true
@@ -259,35 +269,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[20, 18, 18, 16, 11, 8]\n",
-      "[21, 21, 21, 14, 11, 10]\n",
-      "[19, 18, 18, 12, 12, 10]\n",
-      "[20, 18, 18, 16, 14, 14]\n"
+      "[14, 13, 12, 12, 11, 7]\n",
+      "[18, 15, 14, 13, 9, 7]\n",
+      "[17, 15, 14, 14, 13, 7]\n",
+      "[17, 16, 15, 14, 12, 11]\n"
      ]
     }
    ],
    "source": [
-    "# min score 7\n",
+    "# total -3, min score 7\n",
     "for _ in range(4):\n",
     "    player = []\n",
     "    for _ in range(6):\n",
-    "        player.append(max(bj_round_till_win_single()[1], 7))\n",
+    "        player.append(max(bj_round_till_win_single()[1] - 3, 7))\n",
     "    print(sorted(player, reverse=True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "2b7eab6e",
+   "execution_count": 33,
+   "id": "a3ceb369",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[19, 16, 17, 14, 9, 9]"
+       "[17, 16, 13, 11, 7, 4]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,12 +309,12 @@
     "        current_round = bj_round()\n",
     "        if current_round[0] == \"Win\":\n",
     "            group.append(current_round[1] - cum_loss)\n",
-    "        if current_round[0] == \"Draw\":\n",
-    "            cum_loss += penalty_per_loss\n",
+    "        if current_round[0] == \"Win_Double\":\n",
+    "            group.append(current_round[1] - cum_loss + 2)\n",
     "        if current_round[0] == \"Loss\":\n",
     "            cum_loss += penalty_per_loss\n",
     "\n",
-    "    return group\n",
+    "    return sorted(group, reverse=True)\n",
     "\n",
     "\n",
     "bj_round_till_win_group()"
@@ -312,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "id": "10de90f9",
    "metadata": {},
    "outputs": [
@@ -320,10 +330,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[14, 18, 18, 8, 13, 11]\n",
-      "[16, 15, 16, 12, 11, 13]\n",
-      "[19, 13, 17, 9, 15, 14]\n",
-      "[20, 21, 19, 17, 17, 14]\n"
+      "[20, 17, 14, 11, 10, 9]\n",
+      "[20, 14, 12, 11, 9, 7]\n",
+      "[17, 16, 14, 14, 10, 9]\n",
+      "[20, 20, 18, 17, 11, 11]\n"
      ]
     }
    ],
